--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/multimonth": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@mui/material": "^7.3.1",
     "next": "15.5.2",
