--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/multimonth": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@mui/material": "^7.3.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "next": "15.5.2",
     "node-ical": "^0.20.1",
     "react": "19.1.0",
